tests/circularity/out.txt
error: circularity: 't23 in ('t24) -> ('t23)
  ┌─ err.sml:1:11
  │
1 │ fun f _ = f
  │           ^

typechecking failed
